Refactor backend: add async configuration, improve logging with interceptors, introduce global exception handling, and extend DTOs for improved frontend-backend integration. Removed unused adapter package-info. Added dependency update documentation.